chore: update changelog to include fix for gallery gap offset issue

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
@@ -43,7 +43,7 @@
             left: 0;
             right: 0;
             border-bottom: 1px solid var(--grid-border-color, $grid-border-color);
-            margin-top: calc(var(--spacing-small, $spacing-small) / 2);
+            margin-top: calc(var(--gallery-gap) / 2 - 1px);
         }
     }
 }
@@ -70,6 +70,7 @@
 // Grid spacing none
 .widget-gallery.widget-gallery-gridgap-none {
     .widget-gallery-items {
+        --gallery-gap: 0px;
         gap: 0;
     }
 }
@@ -77,6 +78,7 @@
 // Grid spacing small
 .widget-gallery.widget-gallery-gridgap-small {
     .widget-gallery-items {
+        --gallery-gap: var(--spacing-small, $dg-spacing-small);
         gap: var(--spacing-small, $spacing-small);
     }
 }
@@ -84,6 +86,7 @@
 // Grid spacing medium
 .widget-gallery.widget-gallery-gridgap-medium {
     .widget-gallery-items {
+        --gallery-gap: var(--spacing-medium, $dg-spacing-medium);
         gap: var(--spacing-medium, $spacing-medium);
     }
 }
@@ -91,6 +94,7 @@
 // Grid spacing large
 .widget-gallery.widget-gallery-gridgap-large {
     .widget-gallery-items {
+        --gallery-gap: var(--spacing-large, $dg-spacing-large);
         gap: var(--spacing-large, $spacing-large);
     }
 }
